[package]
name = "ragnatools"
version = "0.1.0"
edition = "2021"
authors = [""]
repository = ""
homepage = ""
license = "MIT"
readme = "README.md"
documentation = ""
description = ""

[dependencies]
clippy = { version = "0.0.21", optional = true }
bitflags = "1.3.2"
encoding = "0.2.33"

[features]
dev = ["clippy"]
default = []
